--- a/pom.xml
+++ b/pom.xml
@@ -266,8 +266,13 @@
 			<version>1.5</version>
 		</dependency>
 
+        <dependency>
+            <groupId>com.github.detro.ghostdriver</groupId>
+            <artifactId>phantomjsdriver</artifactId>
+            <version>1.0.4</version>
+        </dependency>
 
-		<dependency>
+        <dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
 			<version>2.3</version>
