--- a/pom.xml
+++ b/pom.xml
@@ -266,6 +266,12 @@
 			<version>3.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>io.appium</groupId>
+			<artifactId>java-client</artifactId>
+			<version>2.1.0</version>
+		</dependency>
+
 		<!-- Selenium Server Standalone -->
 		<dependency>
         	<groupId>org.seleniumhq.selenium</groupId>
