--- a/pom.xml
+++ b/pom.xml
@@ -260,7 +260,7 @@
 		<dependency>
 			<groupId>io.appium</groupId>
 			<artifactId>java-client</artifactId>
-			<version>4.1.2</version>
+			<version>4.1.2-BETA</version>
 		</dependency>
 
 		<!-- Selenium Server Standalone -->
