--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.persado.oss.quality.stevia</groupId>
 	<artifactId>stevia-core</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Stevia QA Framework - Core</name>
@@ -260,7 +260,7 @@
 		<dependency>
 			<groupId>io.appium</groupId>
 			<artifactId>java-client</artifactId>
-			<version>4.1.2</version>
+			<version>5.0.0-BETA9</version>
 		</dependency>
 
 		<!-- Selenium Server Standalone -->
@@ -410,7 +410,7 @@
 	<!-- Shared version number properties -->
 	<properties>
 		<org.springframework.version>4.2.1.RELEASE</org.springframework.version>
-		<selenium.version>2.45.0</selenium.version>
+		<selenium.version>3.4.0</selenium.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
