--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,14 @@
 					<artifactId>maven-release-plugin</artifactId>
 					<version>2.5.3</version>
 				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>3.0.1</version>
+					<configuration>
+						<failOnError>false</failOnError>
+					</configuration>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 
