--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.persado.oss.quality.stevia</groupId>
 	<artifactId>stevia-core</artifactId>
-	<version>1.3.1-SNAPSHOT</version>
+	<version>1.3.1</version>
 	<packaging>jar</packaging>
 
 	<name>Stevia QA Framework - Core</name>
@@ -65,7 +65,7 @@
 
 	<scm>
 		<developerConnection>scm:git:https://github.com/ptsiakos77/stevia.git</developerConnection>
-	  <tag>HEAD</tag>
+	  <tag>stevia-core-1.3.1</tag>
   </scm>
 
 	<build>
